# Data-Analyser-Backend

./: .gitignore  README.md  main.py  pyproject.toml  settings.toml
app/controllers/: auth_controller.py
app/crud/: example.py  models.py
app/db/: mongodb.py  postgre.py
app/models/: ExampleModel.py
app/routes/: analysis_routes.py  auth_routes.py  data_connector_routes.py  model_routes.py
app/schemas/: auth_schemas.py  project_schemas.py
core/models/: classification.py  preprocess.py
